# habit_tracker

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
bot/: config.py  main.py
notifier/: Dockerfile  main.py
