[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A brief description of my project"
authors = ["user"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
passlib = "^1.7"
python-jose = "^3.3"
pydantic = "^2.7"
python-multipart = "^0.0.6"
